@@ -2,3 +2,5 @@
 
 ISABELLE_VSCODE_HOME="$ISABELLE_HOME/src/Tools/VSCode"
 ISABELLE_VSCODE_SETTINGS="$ISABELLE_HOME_USER/vscode"
+
+VSCODE_JAVA_OPTIONS="$ISABELLE_TOOL_JAVA_OPTIONS"
